--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -68,7 +68,7 @@
           </div>
           <div class="row">
               <div class="col-md-5">
-                  <h5>STAKEHOLDER BUSINESS DISCUSSION</h5>
+                  <h5>Stakeholder Business Discussion</h5>
                   <p>We start our requirements gathering from the pillars of the business; the Product Owners, Business SME, 
                       CEO/CTO to get their perspectives, needs & current process issues that they encounter and the potential areas of improvement. 
                     Based on the inputs we define the features and the scope.</p>
@@ -88,7 +88,7 @@
               </div>
               <div class="col-md-1"></div>
               <div class="col-md-5">
-                <h5>DISCOVERING USER PROBLEMS</h5>
+                <h5>Discovering User Problems</h5>
                 <p>We funnel the requirements from the Stakeholders, Business Team and the End-Users - align 
                     according to the Vision of the Product. It takes a series of process to get the inference 
                     from the Research Data. Based on the inputs gleaned from the extensive research and 
@@ -203,7 +203,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-           <h5>SUPPORTING SOLUTIONS</h5>
+           <h5>Supporting Solutions</h5>
         </div>
         </div>
         <div class="row">
@@ -236,7 +236,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5">
-            <h5>TEST FEATURE VIABILITY</h5>
+            <h5>Test Feature Viability</h5>
             <p>We value your time & effort, we employ Early Testing to avoid rework due to mismatch between the
                 users/market needs. We design Visual Prototype and test in multiple stages. Iterate design based on
                 the feedback avoiding changes during the product development or even worse after market launch 
@@ -255,7 +255,7 @@
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-5">
-            <h5>MARKET LAUNCH</h5>
+            <h5>Market Launch</h5>
             <p>With multiple iterations and checkpoints at various stages we ensure the prototype is 
                 ready for hassle freemarket development and market launch.</p>
                 <div class="row">
@@ -328,10 +328,10 @@
 
 <div class="service-step9">
     <div class="step-heading">
-        <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
-        <div class="step-image">
+        <h4>Our  Solutions  Are  Helping  Audience</h4>
+        <!-- <div class="step-image">
             <img src="/assets/images/sample/line.svg" />
-          </div>
+          </div> -->
     </div>
         <div class="case-study">
         <div class="body">
@@ -359,7 +359,7 @@
 <div class="services">
     <div class="container">
         <div class="services-heading">
-            <h5>OTHER SERVICES</h5>
+            <h5>Other Services</h5>
         </div>
         <div class="service-body">
             <div class="row">
