--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -98,7 +98,7 @@
     <div class="container">
         <div class="row">
         <div class="col-md-12">
-            <h5>MOOD BOARD</h5>
+            <h5>Mood Board</h5>
         </div>
         </div>
         <div class="row">
@@ -140,7 +140,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-        <h5>COLORS & TYPOGRAPHY</h5>
+        <h5>Colors & Typography</h5>
     </div>
     </div>
         <div class="row">
@@ -164,7 +164,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-        <h5>ICONOGRAPHY</h5>
+        <h5>Iconography</h5>
     </div>
     </div>
         <div class="row">
@@ -290,7 +290,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-        <h5><span class="highlight">LAYOUT </span>SETUP</h5>
+        <h5><span class="highlight">Layout </span>Setup</h5>
     </div>
         </div>
         <div class="row">
@@ -316,7 +316,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-            <h5>SETUP <span class="highlight">STYLE GUIDE</span></h5>
+            <h5>Setup <span class="highlight">Style Guide</span></h5>
         </div>
         </div>
         <div class="row">
@@ -348,7 +348,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-           <h5>ILLUSTRATIONS</h5>
+           <h5>Illustrations</h5>
         </div>
         </div>
         <div class="row">
@@ -373,7 +373,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-            <h5>LOGO CREATION</h5>
+            <h5>Logo Creation</h5>
         </div>
         </div>
         <div class="row">
@@ -408,7 +408,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-            <h5>USER INTERFACE</h5>
+            <h5>User Interface</h5>
             </div>
         </div>
         <div class="row">
@@ -452,10 +452,10 @@
 
 <div class="service-step9">
     <div class="step-heading">
-        <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
-        <div class="step-image">
+        <h4>Our  Solutions  Are  Helping  Audience</h4>
+        <!-- <div class="step-image">
             <img src="/assets/images/sample/line.svg" />
-          </div>
+          </div> -->
     </div>
         <div class="case-study">
         <div class="body">
@@ -483,7 +483,7 @@
 <div class="services">
     <div class="container">
         <div class="services-heading">
-            <h5>OTHER SERVICES</h5>
+            <h5>Other Services</h5>
         </div>
         <div class="service-body">
             <div class="row">
