--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,7 @@ header{
     //-webkit-box-shadow: 0 3px 5px rgba(0,0,0,.04);
     z-index: 99;
     .navbar{
-        padding: 0;
+        padding: 10px;
     }
     .navbar-brand{
         padding: 20px 0;
@@ -23,13 +23,28 @@ header{
         }
         //
     }
+    // .box{
+    //     width: 80px;
+    //     height: 80px;
+    //     background-color: #000;
+    //     h1{
+    //         font-size: 16px;
+    //         font-weight: 300;
+    //         color: #ffffff;
+    //         text-align: center;
+    //         margin-top: 30px;
+    //         font-weight: 400;
+    //         font-family: 'Noto Serif SC', serif;
+    //     }
+    // }
     .nav-item{
         border: 1px solid transparent;
         padding: 0 12px;
         .nav-link{
             padding: 23px 14px;
             font-size: 14px;
-            font-weight: 300;
+            font-weight: 400;
+            font-family: 'Noto Serif SC', serif;
             color: #A8A8A8;
             span{
                 position: relative;
@@ -97,7 +112,8 @@ header{
             text-align: center;
             opacity: 1;
             font-size: 14px;
-            font-weight: 300;
+            font-weight: 400;
+            font-family: 'Noto Serif SC', serif;
             line-height: 20px;
             &:hover{
                 text-decoration: none;
@@ -124,11 +140,12 @@ header{
 footer{
     padding: 106px 0;
     background-color: #1A1A1A;
-    color: #FFF;
+    color: #8D8D8D;
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     a{
-        color: #FFF;
+        color: #8D8D8D;
     }
     .footer-logo{
         padding: 30px 0;
