--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -45,11 +45,13 @@
 <section class="sample">
   <div class="container">
     <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-5">
+      <!-- <div class="col-md-1"></div> -->
+      <div class="col-md-12">
       <div class="sample-text">
-        <p>We bring</p>
-        <div class="rw-wrapper">
+        <!-- <p>We bring</p> -->
+        <!-- <h2>We bring</h2> -->
+        <h2>We Bring Digital Transformation & Innovation Through Design</h2>
+        <!-- <div class="rw-wrapper">
           <h2 class="rw-sentence">
             <div class="rw-words rw-words-1">
               <span>Digital Transformation</span>
@@ -59,26 +61,26 @@
               <span>Humanistic Experience</span>
             </div>
           </h2>
-        </div>
-        <h1 class="wow fadeInUp" data-wow-delay="0.6s">through Design</h1>
-        <div class="step-image">
+        </div> -->
+        <!-- <h1 class="wow fadeInUp" data-wow-delay="0.6s">through Design</h1> -->
+        <!-- <div class="step-image">
           <img src="/assets/images/sample/line.svg" />
-        </div>
+        </div> -->
         <!-- <h1>through Design</h1> -->
       </div>
     </div>
-    <div class="col-md-1">
+    <!-- <div class="col-md-1">
       <div class="horizontal"></div>
-    </div>
-    <div class="col-md-2">
+    </div> -->
+    <!-- <div class="col-md-2">
       <div class="text">
       <div class="v1"></div>
       <h2>Digital Design & Development Studio</h2>
     </div>
-    </div>
+    </div> -->
     </div>
     <div class="row tab">
-          <div class="col-md-1"></div>
+          <!-- <div class="col-md-1"></div> -->
           <div class="col-md-2 tab-link" routerLink="/services/user-experience">
             <img src="/assets/images/sample/ue.svg" />
             <p>User Experience</p>
@@ -91,7 +93,7 @@
             <img src="/assets/images/sample/ui.svg" />
             <p>UI Development</p>
           </div>
-          <div class="col-md-2 tab-link" routerLink="/services/end-to-end">
+          <div class="col-md-3 tab-link" routerLink="/services/end-to-end">
             <img src="/assets/images/sample/ee.svg" />
             <p>End-to-End Development</p>
           </div>
@@ -99,7 +101,7 @@
             <img src="/assets/images/sample/ut.svg" />
             <p>Usability Testing</p>
           </div>
-          <div class="col-md-1"></div>
+          <!-- <div class="col-md-1"></div> -->
     </div>
   </div>
 </section>
@@ -111,9 +113,9 @@
   <div class="container">
       <div class="services-heading">
           <h4>We Cater to your Needs</h4>
-          <div class="step-image">
+          <!-- <div class="step-image">
             <img src="/assets/images/sample/line.svg" />
-          </div>
+          </div> -->
       </div>
       <div class="service-body">
         <div class="row">
@@ -250,10 +252,10 @@
 
 <div class="solution">
   <div class="solution-heading">
-    <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
-    <div class="step-image">
+    <h4>Our  Solutions  Are  Helping  Audience</h4>
+    <!-- <div class="step-image">
       <img src="/assets/images/sample/line.svg" />
-    </div>
+    </div> -->
   </div>
   <div class="solution-body">
     <ngu-carousel class="solution-carousel" #solutionCarousel [inputs]="solutionsCarouselConfig" [dataSource]="solutions">
@@ -306,10 +308,10 @@
 <section class="our-clients">
   <div class="container">
     <div class="our-client-header">
-        <h3>OUR CLIENTS</h3>
-        <div class="step-image">
+        <h3>Our Clients</h3>
+        <!-- <div class="step-image">
           <img src="/assets/images/sample/line.svg" />
-        </div>
+        </div> -->
     </div>
     <div class="our-client-body">
         <div class="row">
@@ -354,10 +356,10 @@
 <!-- /Our Clients -->
 <!-- Our-team-->
 <div class="our-team">
-      <h1>OUR TEAM</h1>
-      <div class="step-image">
+      <h1>Our Team</h1>
+      <!-- <div class="step-image">
         <img src="/assets/images/sample/line.svg" />
-      </div>
+      </div> -->
 </div>
 <app-our-team></app-our-team>
 <!-- /Our-team-->
