--- a/src/app/components/our-team/our-team.component.scss
+++ b/src/app/components/our-team/our-team.component.scss
@@ -23,18 +23,21 @@ font-style: 'Roboto';
 }
 h2{
     font-size: 24px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
 }
 h6{
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     line-height: 20px;
     margin-bottom: 22px;
     text-align: justify;
 }
 p{
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif SC', serif;
     text-align:right;
 }
 .build-next-product-body {
@@ -54,6 +57,8 @@ p{
     margin-top: 17px;
     span{
         color: #000000;
+        font-weight: 400;
+        font-family: 'Noto Serif SC', serif;
     }
 }
 .container{
@@ -66,7 +71,7 @@ p{
         padding-right: 20px;
     }
     h2{
-        font-size: 16px;
+        font-size: 15px;
     }
     h6{
         font-size: 13px;
