--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -186,9 +186,9 @@
 <div class="service-step4">
     <div class="step-heading">
         <h4>OUR  SOLUTIONS  ARE  HELPING  AUDIENCE</h4>
-        <div class="step-image">
+        <!-- <div class="step-image">
             <img src="/assets/images/sample/line.svg" />
-          </div>
+          </div> -->
     </div>
         <div class="case-study">
         <div class="body">
