--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -49,8 +49,9 @@
       <div class="col-md-12">
       <div class="sample-text">
         <!-- <p>We bring</p> -->
-        <!-- <h2>We bring</h2> -->
-        <h2>We Bring Digital Transformation & Innovation Through Design</h2>
+        <h3>We bring</h3>
+        <h2>Digital Transformation & Innovation</h2>
+        <h3>through Design</h3>
         <!-- <div class="rw-wrapper">
           <h2 class="rw-sentence">
             <div class="rw-words rw-words-1">
@@ -197,7 +198,7 @@
 
       <div class="row service-button">
         <div class="col-md-12">
-        <a class="bttn" routerLink="/cater" >READ MORE</a> 
+        <a class="bttn" routerLink="/cater" >Read More</a> 
       </div>
       </div>
   </div>
