--- a/src/app/components/our-team/our-team.component.html
+++ b/src/app/components/our-team/our-team.component.html
@@ -13,9 +13,9 @@
   <div class="col-sm-5">
     <h6>Provide Meaningful design solution for products which
       amplifies human ability resulting in harmony between
-      users and technology. Design for solving problems,
-      Design for emotions, Design for culture, Design for a
-      better tomorrow.
+      users and technology. Design for Solving Problems,
+      Design for Emotions, Design for Culture, Design for a
+      Better Tomorrow.
       </h6>
       <h6>Transform and invoke design thinking though process
         and innovation to school and college students which
